--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,6 +1,6 @@
 <div class="forms-container">
     <div class="forms">
-        <div routerLink="/brgy-id" class="form1">
+        <div (click)="openFormModal('/brgy-id', 'Barangay ID')" class="form1">
             <img src="/assets/images/forms_images/form1.png" alt="">
             <h5>Barangay ID</h5>
         </div>
