--- a/src/app/components/requests/requests.component.html
+++ b/src/app/components/requests/requests.component.html
@@ -13,6 +13,23 @@
                 <button class="approve" (click)="approveRequest(request.id)">Approve</button>
                 <button class="reject" (click)="rejectRequest(request.id)">Reject</button>
             </div>
+            <div *ngIf="request.showContent && request.formType == 'Barangay ID'" >
+                <p>Request from: {{ request.name }}</p>
+                <p>UID: {{request.userID}}</p>
+                <p>Address: {{ request.address }}</p>
+                <p>Signature: {{request.signature}}</p>
+                <p>Birthdate: {{request.birthdate}}<p>
+                <p>SSS No: {{request.sss}}</p>
+                <p>TIN No: {{request.tin}}</p>
+                <p>BloodType: {{request.bloodtype}}</p>
+                <p>Height: {{request.height}}</p>
+                <p>Weight: {{request.weight}}</p>
+                <p>Emer-name: {{request.emername}}</p>
+                <p>Emer-address: {{request.emeraddress}}</p>
+                <p>Emer-relationship: {{request.emerrelationship}}</p>
+                <p>Emer-contact: {{request.emercontact}}</p>
+                <p>Status: {{ request.status }}</p>
+            </div>
             <div *ngIf="request.showContent && request.formType == 'Barangay Clearance'" >
                 <p>Request from: {{ request.name }}</p>
                 <p>UID: {{request.userID}}</p>
