--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,1 +1,2 @@
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: white" > Loading... </p></ngx-spinner>
+
+<ngx-spinner bdColor = "white" size = "large" color = "cornflowerblue" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: cornflowerblue" > Please wait... </p></ngx-spinner>
